Extract some variables

--- a/src/main/sass/stylesheets/simple.scss
+++ b/src/main/sass/stylesheets/simple.scss
@@ -1,14 +1,16 @@
+$primary_color: #1a1917;
+$secondary_color: #e8e2d2;
 body, html {
   height: 85%;
   font-weight: bold;
-  color: #e8e2d2;
+  color: $secondary_color;
 }
 
 .navbar-fixed-top {
   margin-bottom: 0;
   .navbar-inner {
-    background: #1a1917;
-    color: #e8e2d2;
+    background: $secondary_color;
+    color: $secondary_color;
     text-transform: uppercase;
     padding-left: 80px;
     padding-right: 80px;
@@ -20,7 +22,7 @@ body, html {
 }
 
 .navbar .nav > li > a {
-  color: #e8e2d2;
+  color: $secondary_color;
   text-shadow: none;
   padding-right: 0;
   &:after {
@@ -64,7 +66,7 @@ body, html {
   right: 0;
   top: 60px;
   height: 25px;
-  background: #1a1917;
+  background: $secondary_color;
   border-radius: 0;
   padding: 0 100px;
   li {
@@ -101,7 +103,7 @@ body, html {
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   border-radius: 10px;
-  background: #1a1917;
+  background: $secondary_color;
   padding: 30px;
   width: 270px;
   em {
@@ -127,7 +129,7 @@ body, html {
     .arbitrary-tiny-divider {
       height: 4px;
       width: 60px;
-      background: #e8e2d2;
+      background: $secondary_color;
       position: absolute;
       bottom: 0;
       right: 0;
@@ -137,7 +139,7 @@ body, html {
     text-align: right;
     padding-bottom: 25px;
     margin-bottom: 25px;
-    border-bottom: 4px solid #e8e2d2;
+    border-bottom: 4px solid $secondary_color;
     .team {
       font-size: 32px;
       line-height: 46px;
@@ -162,7 +164,7 @@ body, html {
   bottom: 25px;
   left: 0;
   right: 0;
-  background: #1a1917;
+  background: $secondary_color;
   padding: 3px 95px;
   em {
     color: #ef4343;
@@ -179,11 +181,11 @@ body, html {
 }
 
 .message {
-  @include gradient(#1a1917, #1a1917);
+  @include gradient($secondary_color, $secondary_color);
   margin-bottom: 2px;
   padding: 10px 0;
   &:hover {
-    @include gradient(#1a1917, #1a1917);
+    @include gradient($secondary_color, $secondary_color);
     cursor: pointer;
   }
   p {
